--- a/clustering.rmd
+++ b/clustering.rmd
@@ -689,13 +689,48 @@ Comparing cluster values before and after adjustments, for now just looking at t
 ```{r}
 ##agglom
 adjusted_bee_summary$agglom_bees %>%
-  select(mean_wild_ab, cluster) %>% 
+  select(mean_wild_ab, mean_social_rich ,cluster) %>% 
   rename(adjusted = mean_wild_ab) %>%
+  rename(adjusted_social = mean_social_rich) %>%
   inner_join(original_bee_summary$agglom_bees %>%
-               select(mean_wild_ab, cluster)) %>%
-  select(cluster,mean_wild_ab, adjusted)
+               select(mean_wild_ab, mean_social_rich, cluster)) %>%
+  select(cluster,mean_wild_ab, adjusted, mean_social_rich, adjusted_social)
 ```
 I guess potentially can see two *paths* one with a mean slightly lower than the other if you think of the structure.
 
 
 ### Looking at clusters
+The aim of this section is to look at the clusterings from a 
+
+```{r}
+#Non_markov clustering summary
+whole_cluster %>% 
+  group_by(cluster) %>%
+  summarise_all(funs(mean)) %>%
+  inner_join(non_markov_clusters)
+
+##Agglom clustering summary (end stage)
+
+bee_summary_agglom <- adjusted_bee_summary$agglom_bees %>%
+  slice(8:14) %>%
+  select(-cluster) %>%
+  mutate(cluster = c(1,2,3,4,5,6,7))
+
+
+pesticide_summary_agglom <- aggl_c(aggl_node2, ".pos", 1)  %>%
+  bind_rows(aggl_c(aggl_node2, ".pos", 2) %>%
+  mutate(cluster = if_else(cluster == 1, 3, 4))) %>%
+  bind_rows(aggl_c(aggl_node3, ".pos", 1)%>%
+  mutate(cluster = if_else(cluster == 1, 5, 6))) %>%
+  bind_rows(aggl_c(aggl_node3, ".pos", 2)%>%
+  mutate(cluster = if_else(cluster ==1, 7, 8))) %>%
+  group_by(cluster) %>%
+  summarise_all(funs(mean))
+
+bee_summary_agglom %>% 
+  inner_join(pesticide_summary_agglom) %>%
+  select(-orchard)
+
+
+
+```
