demo shiny app hosted

--- a/clustering.rmd
+++ b/clustering.rmd
@@ -1758,5 +1758,5 @@ temp_nat_adjusted %>%
 
 save(data_2012, maximum_final, euclidean_final, agglom_summary, kmeans_summary,
                maximum_final_standardised, euclidean_final_standardised,
-               agglom_summary_standardised, kmeans_summary_standardised, clust_comps, standardised_clust_comps, protocol_summary, file = "ShinyData.RData")
+               agglom_summary_standardised, kmeans_summary_standardised, clust_comps, standardised_clust_comps, protocol_summary, file = "shinydata.RData")
 ```
